# fastapi-htmx-login

./: .coverage  .gitignore  LICENSE  Makefile  README.md  config.py  main.py  pyproject.toml
app/cognito/: README.md  htmx.py  mails.py  token.py  utils.py
app/cognito/api/: main.py
app/cognito/api/routes/: login.py
app/cognito/email-templates/: build-emails.js  package-lock.json  package.json
app/cognito/email-templates/src/: magic_link_email.mjml  reset_password.mjml
scripts/git-hooks/: pre-commit
templates/: index.html  login.html  welcome.html
templates/partials/: error_message.html  success_message.html
tests/: conftest.py  test_additional_auth.py  test_auth.py  test_units.py
